PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phoromatic: Allow triggers to be deleted
- phoromatic: Rely on caching for determining pre-existing cached test profiles from the web UI
- phoromatic: Add result RSS support
- phoromatic: Add new option to results page
- phoromatic: Enforce new PTS sign-on whenever the PTS core version changes due to potential interface changes

Phoronix Test Suite 5.6 Milestone 2
4 February 2015

- pts-core: Various fixes
- pts-core: Deb/RPM build packaging improvements.
- pts-core: Add Markdown Readme file
- pts-core: Add hidden ?seed_accountid= option to the welcome / account creation page for custom 6 character ID
- pts-core: Fix for session save path on Fedora when running as normal user
- pts-core: Import copy of FPDF locally for PDF rendering
- phoromatic: Add a public view of test results by going to result page entry -> Result Export -> Public Viewer
- phoromatic: Add basic "Upload To OpenBenchmarking.org" link from test result page
- phoromatic: Allow users to reset their own password by navigating to the settings page
- phoromatic: Add "group name" concept to Phoromatic group of accounts
- phoromatic: Improved formatting of the public-viewer page
- phoromatic: Allow downloading results as PDF
- phoromatic: Allow disabling new account registration by setting custom string via rootadmin's config page
- phoromatic: Allow setting a main page message string to show users once logging into their account, via rootadmin's config page
- phoromatic: Don't show idling systems on the dashboard
- phoromatic: Add IP ping test to system claim page
- phoromatic: Introduce PPRID structure as universal unique identifier for results between accounts
- phoromatic: Allow optional result sharing between groups / unique accounts (controlled via settings)
- phoromatic: Add "force result sharing" option to rootadmin to override per-account settings
- phoromatic: New result compare functionality